gui almost finished

--- a/gui/views/pugIndex.pug
+++ b/gui/views/pugIndex.pug
@@ -15,7 +15,7 @@ body
         .names-container
             h2 presione en el nombre para borrarlo de la lista
             ul 
-                each name in names
+                each name in code
                     li(onclick="el()").li1#target #{name}
         button.run Run
                
