--- a/gui/views/cozmo.pug
+++ b/gui/views/cozmo.pug
@@ -75,17 +75,13 @@ style.
           a.dropdown-item(href='#')
             h6#CUBERED.nopar CUBERED
           a.dropdown-item(href='#')
-            h6#CUBEBLUE.par CUBEBLUE
+            h6#CUBEBLUE.nopar CUBEBLUE
           a.dropdown-item(href='#')
             h6#CUBEGREEN.nopar CUBEGREEN
           a.dropdown-item(href='#')
             h6#PICKUP.nopar PICKUP
           a.dropdown-item(href='#')
             h6#DROP.nopar DROP
-          a.dropdown-item(href='#')
-            h6#ROLLCUBE.nopar ROLLCUBE
-          a.dropdown-item(href='#')
-            h6#WHEELIE.nopar WHEELIE
       .dropdown
         button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false')
             | Animals
@@ -93,7 +89,7 @@ style.
           a.dropdown-item(href='#')
             h6#DUCK.nopar DUCK
           a.dropdown-item(href='#')
-            h6#ELEPHANT.par ELEPHANT
+            h6#ELEPHANT.nopar ELEPHANT
           a.dropdown-item(href='#')
             h6#SHEEP.nopar SHEEP
       div
