fixed everything again

--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -14,8 +14,8 @@
 
     <body>
         <h1> Functions executed</h1>
-        <div class="codebox">
-            <pre>
+        <div  style="width: 100% !important;"  class="codebox">
+            <pre style="width: 100% !important;">
                 <code class="python">
                 import cozmo, time
                 from cozmo.lights import blue_light, Color, green_light, Light, red_light, white_light, off_light
