--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 
     <body>
-        <h1> Functions executed</h1>
+        <h1> Functions executed on {{t}}</h1>
         <div  style="width: 100% !important;"  class="codebox">
             <pre style="width: 100% !important;">
                 <code class="python">
