--- a/gui/views/cozmo.pug
+++ b/gui/views/cozmo.pug
@@ -96,7 +96,7 @@ style.
         a.btn.btn-secondary(href='/' style='background-color: #a64dff !important;' aria-haspopup='true' aria-expanded='false')
             | Home
       div
-        a.btn.btn-secondary(href='localhost:5000' style='background-color: #669999 !important;' aria-haspopup='true' aria-expanded='false')
+        a.btn.btn-secondary(href='http://localhost:5000'  target="_blank" style='background-color: #669999 !important;' aria-haspopup='true' aria-expanded='false')
             | Code
 
     .jumbotron(style='color: black;')
