--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 
     <body>
-        <h1> Functions executed on {{t}}</h1>
+        <h1> Functions executed on {{t[0]}}</h1>
         <div  style="width: 100% !important;"  class="codebox">
             <pre style="width: 100% !important;">
                 <code class="python">
@@ -23,9 +23,9 @@
 
                 def cozmo_program(robot: cozmo.robot.Robot):
                     {% for function in functions_executed %}
-                        {{function}}
+                    {{function}}
                     {% endfor %}
-                            cozmo.run_program(cozmo_program)
+                cozmo.run_program(cozmo_program)
                 </code>
             </pre>
         </div>
